tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceFault-3B/InterfaceFault.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceFault-3B/InterfaceFault.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a invalid use of WSDL 2.0 interface faults. 
		When an interface extends two interfaces that both
		define faults with the same name the component models
		of those faults must be equivalent. It also violates
		an optional assertion that states that all interface
		fault names within a namespace should be unique.
		
		This document violates assertion InterfaceFault-1015 and
		InterfaceFault-1016.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org">
			<xs:element name="myElement" type="xs:string" />
		</xs:schema>
	</wsdl:types>
	
	<wsdl:interface name="myInterface">
		<wsdl:fault name="myFault">
		</wsdl:fault>
	</wsdl:interface>

	<wsdl:interface name="myInterface2">
		<wsdl:fault name="myFault" element="tns:myElement">
		</wsdl:fault>
	</wsdl:interface>
	
	<wsdl:interface name="myInterface3" extends="tns:myInterface tns:myInterface2">
	</wsdl:interface>

</wsdl:description>
